# NM-SpMM

./: CMakeLists.txt  README.md
benchmark/different_kernel/: Makefile  cublas_f32  cublas_f32.cu  output.txt  run_nmspmm.sh  test_nmspmm  test_nmspmm.cu
benchmark/different_kernel/search_shape/: search_out.txt  search_shape.sh  test  test.cu
benchmark/kernel_performance/: README.md  plot.py  plot.sh
benchmark/kernel_performance/result_data/: cublas_3090.txt  cublas_4090.txt  cublas_a100.txt  nmsparse_3090_0.5.txt  nmsparse_3090_0.625.txt  nmsparse_3090_0.75.txt  nmsparse_3090_0.875.txt  nmsparse_4090_0.5.txt  nmsparse_4090_0.625.txt  nmsparse_4090_0.75.txt  nmsparse_4090_0.875.txt  nmsparse_a100_0.5.txt  nmsparse_a100_0.625.txt  nmsparse_a100_0.75.txt  nmsparse_a100_0.875.txt  nmspmm_3090_0.5.txt  nmspmm_3090_0.625.txt  nmspmm_3090_0.75.txt  nmspmm_3090_0.875.txt  (+20 more)
benchmark/step-wise/: README  build.sh  data.txt  plot.py  plot.sh  run_bench.sh  v0_naive  v0_naive.cu  v1_block_tiling  v1_block_tiling.cu  v2_warp_thread_tiling  v2_warp_thread_tiling.cu  v3_sparsity_aware_high_sparsity  v3_sparsity_aware_high_sparsity.cu  v3_sparsity_aware_low_sparsity  v3_sparsity_aware_low_sparsity.cu  v4_prefetch_high_sparsity  v4_prefetch_high_sparsity.cu  v4_prefetch_low_sparsity  v4_prefetch_low_sparsity.cu  v5_splitK_high_sparsity  v5_splitK_high_sparsity.cu  v5_splitK_low_sparsity  v5_splitK_low_sparsity.cu
include/: NM-SpMM.h  ptx.h  utils.h
src/: kernel_32x32_4x4.cu  kernel_32x64_8x4.cu  kernel_64x128_8x8.cu  kernel_64x64_8x8.cu  preprocessing.cu
tests/: test_nmspmm.cu
(+31 files in other folders)
